--- a/Examen-Pratique/monotoring/prometheus/prometheus.yml
+++ b/Examen-Pratique/monotoring/prometheus/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets: ['node-exporter:9100']
+      - targets: ['172.18.0.1:9100']
 
 rule_files:
   - 'alert-rules.yml'
